# KernelGuard

./: .gitignore  CMakeLists.txt
linux-source-6.8.0/kernel/: ptrace.c
linux-source-6.8.0/mm/: memory.c  process_vm_access.c
programs/: .gitignore  kernelguard  kg_debugger.cpp  kg_kernelguard  kg_memory  kg_memory.cpp  kg_memory1  kg_normal.cpp  kg_protected.cpp
